package seata

import (
	"context"
	"fmt"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// GrpcClient represents a gRPC client for Seata server
type GrpcClient struct {
	conn   *grpc.ClientConn
	client TransactionServiceClient
}

// NewGrpcClient creates a new gRPC client
func NewGrpcClient(endpoint string) *GrpcClient {
	// Note: This is a placeholder. In a real implementation, you would:
	// 1. Generate Go code from the .proto files
	// 2. Use the generated client code
	// 3. Implement proper connection management

	return &GrpcClient{}
}

// TransactionServiceClient is a placeholder for the generated gRPC client
type TransactionServiceClient interface {
	StartGlobal(ctx context.Context, req *StartGlobalRequest) (*StartGlobalResponse, error)
	Submit(ctx context.Context, req *SubmitRequest) (*SubmitResponse, error)
	Abort(ctx context.Context, req *AbortRequest) (*AbortResponse, error)
	AddBranch(ctx context.Context, req *AddBranchRequest) (*AddBranchResponse, error)
	BranchTry(ctx context.Context, req *BranchTryRequest) (*BranchTryResponse, error)
	BranchSucceed(ctx context.Context, req *BranchSucceedRequest) (*BranchSucceedResponse, error)
	BranchFail(ctx context.Context, req *BranchFailRequest) (*BranchFailResponse, error)
	Get(ctx context.Context, req *GetRequest) (*GetResponse, error)
	List(ctx context.Context, req *ListRequest) (*ListResponse, error)
}

// gRPC Request/Response types (placeholders)
type StartGlobalRequest struct {
	GID     string
	Mode    string
	Payload []byte
}

type StartGlobalResponse struct {
	GID string
}

type SubmitRequest struct {
	GID string
}

type SubmitResponse struct {
	Status string
}

type AbortRequest struct {
	GID string
}

type AbortResponse struct {
	Status string
}

type AddBranchRequest struct {
	GID      string
	BranchID string
	Action   string
}

type AddBranchResponse struct {
	Status string
}

type BranchTryRequest struct {
	GID      string
	BranchID string
	Action   string
	Payload  []byte
}

type BranchTryResponse struct {
	Status string
}

type BranchSucceedRequest struct {
	GID      string
	BranchID string
}

type BranchSucceedResponse struct {
	Status string
}

type BranchFailRequest struct {
	GID      string
	BranchID string
}

type BranchFailResponse struct {
	Status string
}

type GetRequest struct {
	GID string
}

type GetResponse struct {
	Transaction *GlobalTxn
}

type ListRequest struct {
	Limit  int32
	Offset int32
	Status string
}

type ListResponse struct {
	Transactions []*GlobalTxn
}

type GlobalTxn struct {
	GID         string
	Mode        string
	Status      string
	Payload     []byte
	Branches    []*BranchTxn
	UpdatedUnix int64
	CreatedUnix int64
}

type BranchTxn struct {
	BranchID string
	Action   string
	Status   string
}

// Connect establishes a connection to the gRPC server
func (gc *GrpcClient) Connect(endpoint string) error {
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	conn, err := grpc.DialContext(ctx, endpoint, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		return fmt.Errorf("failed to connect to gRPC server: %w", err)
	}

	gc.conn = conn
	// gc.client = NewTransactionServiceClient(conn) // This would be generated from proto files

	return nil
}

// Close closes the gRPC connection
func (gc *GrpcClient) Close() error {
	if gc.conn != nil {
		return gc.conn.Close()
	}
	return nil
}

// StartGlobal starts a global transaction via gRPC
func (gc *GrpcClient) StartGlobal(ctx context.Context, req *StartGlobalRequest) (*StartGlobalResponse, error) {
	if gc.client == nil {
		return nil, fmt.Errorf("gRPC client not connected")
	}

	// This would use the actual generated client
	// return gc.client.StartGlobal(ctx, req)

	// Placeholder implementation
	return &StartGlobalResponse{
		GID: req.GID,
	}, nil
}

// Submit submits a transaction via gRPC
func (gc *GrpcClient) Submit(ctx context.Context, req *SubmitRequest) (*SubmitResponse, error) {
	if gc.client == nil {
		return nil, fmt.Errorf("gRPC client not connected")
	}

	// This would use the actual generated client
	// return gc.client.Submit(ctx, req)

	// Placeholder implementation
	return &SubmitResponse{
		Status: "success",
	}, nil
}

// Abort aborts a transaction via gRPC
func (gc *GrpcClient) Abort(ctx context.Context, req *AbortRequest) (*AbortResponse, error) {
	if gc.client == nil {
		return nil, fmt.Errorf("gRPC client not connected")
	}

	// This would use the actual generated client
	// return gc.client.Abort(ctx, req)

	// Placeholder implementation
	return &AbortResponse{
		Status: "success",
	}, nil
}

// AddBranch adds a branch via gRPC
func (gc *GrpcClient) AddBranch(ctx context.Context, req *AddBranchRequest) (*AddBranchResponse, error) {
	if gc.client == nil {
		return nil, fmt.Errorf("gRPC client not connected")
	}

	// This would use the actual generated client
	// return gc.client.AddBranch(ctx, req)

	// Placeholder implementation
	return &AddBranchResponse{
		Status: "success",
	}, nil
}

// BranchTry executes try phase via gRPC
func (gc *GrpcClient) BranchTry(ctx context.Context, req *BranchTryRequest) (*BranchTryResponse, error) {
	if gc.client == nil {
		return nil, fmt.Errorf("gRPC client not connected")
	}

	// This would use the actual generated client
	// return gc.client.BranchTry(ctx, req)

	// Placeholder implementation
	return &BranchTryResponse{
		Status: "success",
	}, nil
}

// BranchSucceed marks branch as successful via gRPC
func (gc *GrpcClient) BranchSucceed(ctx context.Context, req *BranchSucceedRequest) (*BranchSucceedResponse, error) {
	if gc.client == nil {
		return nil, fmt.Errorf("gRPC client not connected")
	}

	// This would use the actual generated client
	// return gc.client.BranchSucceed(ctx, req)

	// Placeholder implementation
	return &BranchSucceedResponse{
		Status: "success",
	}, nil
}

// BranchFail marks branch as failed via gRPC
func (gc *GrpcClient) BranchFail(ctx context.Context, req *BranchFailRequest) (*BranchFailResponse, error) {
	if gc.client == nil {
		return nil, fmt.Errorf("gRPC client not connected")
	}

	// This would use the actual generated client
	// return gc.client.BranchFail(ctx, req)

	// Placeholder implementation
	return &BranchFailResponse{
		Status: "success",
	}, nil
}

// Get retrieves a transaction via gRPC
func (gc *GrpcClient) Get(ctx context.Context, req *GetRequest) (*GetResponse, error) {
	if gc.client == nil {
		return nil, fmt.Errorf("gRPC client not connected")
	}

	// This would use the actual generated client
	// return gc.client.Get(ctx, req)

	// Placeholder implementation
	return &GetResponse{
		Transaction: &GlobalTxn{
			GID: req.GID,
		},
	}, nil
}

// List retrieves transactions via gRPC
func (gc *GrpcClient) List(ctx context.Context, req *ListRequest) (*ListResponse, error) {
	if gc.client == nil {
		return nil, fmt.Errorf("gRPC client not connected")
	}

	// This would use the actual generated client
	// return gc.client.List(ctx, req)

	// Placeholder implementation
	return &ListResponse{
		Transactions: []*GlobalTxn{},
	}, nil
}
